<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/invitation"
        android:enabled="true"
        android:icon="@drawable/ic_invitation"
        android:title="@string/invitation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/gallery"
        android:enabled="true"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mandva"
        android:enabled="true"
        android:icon="@drawable/icons_city_church"
        android:title="@string/mandva"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sangeet"
        android:enabled="true"
        android:icon="@drawable/ic_sangeet"
        android:title="@string/sangeet"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/marriage"
        android:enabled="true"
        android:icon="@drawable/ic_marriage"
        android:title="@string/marriage"
        app:showAsAction="ifRoom" />

</menu>
