<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llTabParent"
    android:layout_width="match_parent"
    android:paddingTop="4dp"
    android:layout_height="60dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_house" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/title_home"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMandva"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:alpha="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_temple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/mandva"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSangeet"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:alpha="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_microphone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/sangeet"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMarriage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:alpha="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_couple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/marriage"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>